Fix - price alignment

--- a/assets/css/restaurantpress.scss
+++ b/assets/css/restaurantpress.scss
@@ -423,7 +423,7 @@
 
 						span.price,
 						p.price {
-							float: right;
+							text-align: right;
 							color: $highlight;
 							font-size: 1.25em;
 
